kfdefs/overlays/moc/zero/opf-dashboard/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: odh-dashboard-google
spec:
    host: odh.operate-first.cloud
    to:
        kind: Service
        name: odh-dashboard
        weight: 100
    tls:
        insecureEdgeTerminationPolicy: Redirect
        termination: edge
        certificate: ENC[AES256_GCM,data:qK4PhGOpmiUjWkuF0BeOifBasQYV97V2sApnlcGZ333LxTy3JzowWFdoz3ShUQph/Yo2jSP6mo1xjipxMl9BQIQBOqBXh49CqaC1cld0pBH9ltEttqhAEpVEZS9GVhi/a6ZLf9wDYtoi7c9LALqr/t+phFBrhsXv7QPtsE8hIpnuS3pfWfKPoBQxLXyccZUjASblxvaITilBN0pAQ3hYXCgRM36xsvnsaX/gtMY+FdFi2mU50oelE/bmlBSQ0rOK+UhcpxokF3jZA5Y+e48EvYEqdVlro2WgnbpM3vTUs1Q6VRp3W+PSGswcnFa6wTUZDOtNFHj00ZOxJGeIA6DUx/2N8BDZrKj3DbEA1rO8Ci0UgEPNNOiPgaRSs611HZZvU4pZjbuOdaa0HogMQLbOMGrTBqSGHrc8MkrtehvIFya8JjMlOSz7SbvizENBag6Gv/QytNR0D+b [...]
        key: ENC[AES256_GCM,data:zsNfqIay5GUjIjje1YXGKaBYhwf9i+WG0TBTxzfodAMLoUtty5Rea3myUm4hmtnvO8RyYrlWPw2Z8H3fcjlCOIBACxfHUgasLbxwRF3jK/+rKU9BOGbtYK3vLX9CVXZY/X6uooQ1hWVkQF1f8da9FEBKU1gtHHlwcKJjF9siEeCTUi8txP//jQknhU94RdyToaoiEby6TlS3KsnOqAJP0z1KnDrKxkiXAnC7MbgfUuXu8E4kkfKdqe9gpP3VGQXWnilmTLdHTZD14ehD0EA3ZIcmT2X6BsZojHF3k5IgUvb7F8AsRq5bg0ueW1Bvu6mjsxgZx9Xdd2H28uh/wMjbjbgfLa4AhaS/Pj4NTCmraGvq0Nwv2CCrk9fIAFxJlO1txpxteKVUMoxQEEh4FdFHCcLuSolJL1zrx6B1njaFDxtS/AAJu5vf5HxaaWlWkDyGfqmFGMKsnG5FLyWQpge [...]
        caCertificate: ENC[AES256_GCM,data:o1s5cfIcOdu/QZ1zfuly4/ghb/UKMi2vNgDS/Aamc6pXFRNUq3dgZbtb4NSvFeNaPCtoW73wokK0ISl0/qzeC/rYq9G4j/DkjTJGDXWmnoexjXYBORShfvFZhlbOMWNuKt44Qo6e5B8pb1yVLRK6PaYDUpBzMFg9ahtArj26IkSix7IpFjEvVKFAdanahX67eaAjO9AJqcdBoQwJ6+LH+Wexrd1l/RSgLbpvinjBPBr/MpmyZr6Z066FCeyW1LjEselngQud6+fq9SnGF9GgaVUYWUezhAm65xcGgAIDK4gIo9rgNfg4XvHhpz2PB0gPJ4fbXAsXOcniFEswoamF+os8nbRN0aPQrzPR5h4cXDZNVosoaAm7hgvvWrjrSqvSm14CEwUlS9HnzOPc2pq2/qQcU74XrfP18T38K1hVQ7DrXhk3Q05cmiKToL1FDjIhzbjIhf7v/ [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-03-26T08:59:52Z"
    mac: ENC[AES256_GCM,data:RRoAJWBCi6S5B+Ora8ORTIq9hel5FQisODyr6e+AW1m/2clCby9Aex4Oom4DPYF1Yh4VhkXEOAaMzFli7sVZgxlRsT7/rbypDDdaxty+mUy3UiW+3naTpWzb9/K8sXIVHPpsoDZO45z8H1/vIu42RbmR6Wq8KvPZhHwTpBsfizE=,iv:wIkxdWLsb1Rwiz67ZVj4DhoI4zG2zzLQNFQkBlzWSQ4=,tag:ttcPRnfpQR5tmN1jnpUmuw==,type:str]
    pgp:
        - created_at: "2021-03-25T14:42:24Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ/9HR7OSduACML4LvoWgxChTTldDqbhdKJR1ruAuOx/imdJ
[...]
            =zFOS
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(certificate|caCertificate|key)$
    version: 3.7.0
